cncProd/force-app/main/default/objects/Package_Additional_Charges__c/Package_Additional_Charges__c.object-meta.xml
<CustomObject>
    <label>Package Additional Charges</label>
    <nameField>
        <displayFormat>PAC-{0000000000}</displayFormat>
        <label>Package Additional Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Additional Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>