cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_ADDCHARGE__c.field-meta.xml
<CustomField>
    <fullName>PKC_ADDCHARGE__c</fullName>
    <formula>IF(PKC_INCPRICE__c = &apos;INC&apos;, &apos;INCLUSIVE&apos;, &apos;S$&apos; + &apos; &apos; + TEXT(PKC_CHARGES__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Additional Charge</label>
    <type>Text</type>
</CustomField>