cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_ADM_CHRGDESC__c.field-meta.xml
<CustomField>
    <fullName>PKC_ADM_CHRGDESC__c</fullName>
    <formula>Additional_Charges_Master__r.ADM_CHRGDESC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Description</label>
    <type>Text</type>
</CustomField>