cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>PKC_CHARGES__c</fullName>
    <label>Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>