cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_DISPLAY__c.field-meta.xml
<CustomField>
    <fullName>PKC_DISPLAY__c</fullName>
    <label>Display</label>
    <length>1</length>
    <type>Text</type>
</CustomField>