cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_PKH_UNIQUEBRCD__c.field-meta.xml
<CustomField>
    <fullName>PKC_PKH_UNIQUEBRCD__c</fullName>
    <label>Branch Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>