cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_PRINT__c.field-meta.xml
<CustomField>
    <fullName>PKC_PRINT__c</fullName>
    <label>Print</label>
    <length>1</length>
    <type>Text</type>
</CustomField>