cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_REBATE__c.field-meta.xml
<CustomField>
    <fullName>PKC_REBATE__c</fullName>
    <label>Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>