cncProd/force-app/main/default/objects/Package_Additional_Charges__c/fields/PKC_REMOVABLE__c.field-meta.xml
<CustomField>
    <fullName>PKC_REMOVABLE__c</fullName>
    <label>Removable</label>
    <length>1</length>
    <type>Text</type>
</CustomField>