cncProd/force-app/main/default/objects/Package_Additional_Charges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Additional_Charges_Master__c</columns>
    <columns>PKC_ADM_CHRGDESC__c</columns>
    <columns>PKC_CHARGES__c</columns>
    <columns>PKC_DISPLAY__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>PKC_INCPRICE__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>PKC_ADDCHARGE__c</columns>
    <columns>Package_Header__c</columns>
    <columns>PKC_PKH_PKGNO__c</columns>
    <columns>PKC_REMOVABLE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>